@@ -15,6 +15,10 @@ ScriptRunner
 ---------------------
 * Change ScriptRunner/AntBuilder to only create antBuilderOutput.log when needed. Reported by Jared Tafralian.
 
+UCM
+---------------------
+* Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.
+
 
 CruiseControl Release Notes - 2.7.3
 
